<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tbowdev.auctioncalc.MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp">

    <!-- Title -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText android:id="@+id/input_title"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="textCapWords"
                  android:hint="@string/title" />
    </android.support.design.widget.TextInputLayout>

    <!-- Max Bid -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">
        <EditText android:id="@+id/input_maxbid"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:inputType="numberDecimal"
                  android:hint="@string/bid_amount" />
    </android.support.design.widget.TextInputLayout>

    <!-- Location -->
    <TextView
        android:textColor="@color/accent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>
    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/location_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="8dp"/>

    <!-- Results-->
    <android.support.v7.widget.CardView
        android:id="@+id/my_results_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:elevation="36dp"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <!-- Total Cost -->
            <LinearLayout
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_cost"
                    android:textSize="24sp"/>
                <TextView
                    android:textColor="@color/primary_text"
                    android:textSize="24sp"
                    android:id="@+id/total_cost_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/divider_color"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"/>

            <!-- Sales Price Fee -->
            <LinearLayout
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:textColor="@color/secondary_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sales_price_fee"/>
                <TextView
                    android:textColor="@color/secondary_text"
                    android:id="@+id/sales_fee_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <!-- Internet Fee -->
            <LinearLayout
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textColor="@color/secondary_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/internet_fee"/>
                <TextView
                    android:textColor="@color/secondary_text"
                    android:id="@+id/internet_fee_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <!-- Load Fee -->
            <LinearLayout
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textColor="@color/secondary_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/load_fee"/>
                <TextView
                    android:textColor="@color/secondary_text"
                    android:id="@+id/load_fee_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <!-- Taxes -->
            <LinearLayout
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textColor="@color/secondary_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taxes_text"/>
                <TextView
                    android:textColor="@color/secondary_text"
                    android:id="@+id/tax_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <!-- Submit -->
    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="24dp"
        android:elevation="36dp"
        android:textStyle="normal"
        android:textSize="16sp"
        android:fontFamily="sans-serif"/>

</LinearLayout>
